09-24-13
 - Using -loadgame or -convertsave will set the cursor in the main menu to the
   same slot.  Useful for netgames and just hitting F5 and enter.
 - Preliminary DEHACKED support!  Code from Chocolate Doom, readapted.
   Most functions are there, a few stray DEH_Strings remain.
   NO extended text or extended cheat text limit support.
 - PC Speaker returns!  Thanks to Chocolate Doom for the fix.

09-23-13
 - Weapon pick up text in Netgames.
 - No friendly fire in coop.
 - "-noexit" to disable exits in netgames.  Useful for DM maps.  Only works
   for valid netgames.  You can test it out with IPXSETUP.EXE -NODES 1
   -NOEXIT.

09-22-13
 - Default to Super Shotgun in Doom 2 games in coop if you have it.
 - Fixed -cdrom parameter.
 - The startup screen should now be extremely close to the original.
   The only thing that is changed is not showing the netgame parameters
   if you're starting single player.

09-21-13
 - Load a custom Gravis UltraSound INI file with -usegusini <filename.ini>.
   Error checks are in place to see if the file exists and if you passed
   something after -usegusini.

09-20-13
 - IDMUS is no longer a cheat.
 - From Heretic v1.3a port:
   * Player Died! message.
 - Disabled cheating in nightmare again, except IDDT and IDCLEV like original.

09-19-13
 - -convertsave <slot #> parameter.  Convert your old saves to the new ones!
   I don't think it will corrupt it, but do a backup first just in case.
 - Z_Free(&savebuffer) when you error out of incorrect versions.

09-18-13
 - Changed priority of the weapon pickup sound.  Stuff was taking over it, and
   I'm sure I don't remember Doom being that weird about it.

09-17-13
 - Fixed animated background intermissions.  Was if(commercial), needed to be
   if(gamemode == commercial).
 - Chex Quest:
   * No longer draws a coop stats intermission.  Text was overlapping,
     entirely way too large. Not worth the effort.
   * Chex(R) Quest Startup.
   * Chex Quest 2 map names.