@@ -5,10 +5,7 @@
 #endif
 #include "doomstat.h"
 
-
-// Game Mode - identify IWAD as shareware, retail etc.
 GameMode_t		gamemode = indetermined;
-GameMission_t	gamemission = doom;
 
 // Language.
 Language_t		language = english;
