@@ -508,17 +508,14 @@ void G_DoLoadLevel (void)
 
     // DOOM determines the sky texture to be used
     // depending on the current episode, and the game version.
-    if ( (gamemode == commercial)
-	 || ( gamemode == pack_tnt )
-	 || ( gamemode == pack_plut ) )
-    {
-	skytexture = R_TextureNumForName ("SKY3");
-	if (gamemap < 12)
-	    skytexture = R_TextureNumForName ("SKY1");
-	else
-	    if (gamemap < 21)
-		skytexture = R_TextureNumForName ("SKY2");
-    }
+	if ( (gamemode == commercial))
+	{
+		skytexture = R_TextureNumForName (DEH_String("SKY3"));
+		if (gamemap < 12)
+			skytexture = R_TextureNumForName (DEH_String("SKY1"));
+		else if (gamemap < 21)
+			skytexture = R_TextureNumForName (DEH_String("SKY2"));
+	}
 
     levelstarttic = gametic;        // for time calculation
     
@@ -1560,7 +1557,8 @@ G_InitNew
   int		map ) 
 { 
     int             i; 
-	 
+	char	*skytexturename; // FS: For DEH
+
     if (paused) 
     { 
 	paused = false; 
@@ -1595,7 +1593,6 @@ G_InitNew
     }
     
 
-  
     if (map < 1) 
 	map = 1;
     
@@ -1642,34 +1639,35 @@ G_InitNew
     gameskill = skill; 
  
     viewactive = true;
-    
-    // set the sky map for the episode
-    if ( gamemode == commercial)
-    {
-	skytexture = R_TextureNumForName ("SKY3");
-	if (gamemap < 12)
-	    skytexture = R_TextureNumForName ("SKY1");
+   
+	// set the sky map for the episode
+	if ( gamemode == commercial)
+	{
+		skytexture = R_TextureNumForName (DEH_String("SKY3"));
+		if (gamemap < 12)
+			skytexture = R_TextureNumForName (DEH_String("SKY1"));
+		else if (gamemap < 21)
+			skytexture = R_TextureNumForName (DEH_String("SKY2"));
+	}
 	else
-	    if (gamemap < 21)
-		skytexture = R_TextureNumForName ("SKY2");
-    }
-    else
-	switch (episode) 
-	{ 
-	  case 1: 
-		skytexture = R_TextureNumForName ("SKY1"); 
-	    break; 
-	  case 2: 
-	    skytexture = R_TextureNumForName ("SKY2"); 
-	    break; 
-	  case 3: 
-	    skytexture = R_TextureNumForName ("SKY3"); 
-	    break; 
-	  case 4:	// Special Edition sky
-	    skytexture = R_TextureNumForName ("SKY4");
-	    break;
-	} 
- 
+	{
+		switch (episode) 
+		{ 
+			case 1: 
+				skytexture = R_TextureNumForName (DEH_String("SKY1")); 
+				break; 
+			case 2: 
+			    skytexture = R_TextureNumForName (DEH_String("SKY2")); 
+			    break; 
+			case 3: 
+			    skytexture = R_TextureNumForName (DEH_String("SKY3")); 
+			    break; 
+			case 4:	// Special Edition sky
+			    skytexture = R_TextureNumForName (DEH_String("SKY4"));
+			    break;
+		} 
+	}
+
     G_DoLoadLevel (); 
 } 
  
